# ai-news-radar

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js
backend/: Dockerfile  keywords.yaml  known_tools.txt  mcp_server.py  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_multi_source.py  003_add_points.py  004_add_summary.py  005_url_index.py  006_fts5_index.py  007_bookmarks.py  008_email_webhook_sent.py  009_embeddings.py
backend/app/: config.py  main.py  models.py  schemas.py
backend/app/api/: auth.py  deps.py
backend/app/briefing/: briefing_generator.py  highlight_scorer.py  weekly_briefing_generator.py
backend/app/embeddings/: embedding_service.py  vector_search.py
backend/app/fetcher/: arxiv_fetcher.py  github_fetcher.py  hn_fetcher.py  multi_source_fetcher.py  reddit_fetcher.py  (+2 more)
backend/scripts/: backfill_embeddings.py  generate_briefing.py  generate_weekly_briefing.py  regenerate_briefings.py  seed_keywords.py
backend/tests/: conftest.py  test_api.py  test_arxiv_fetcher.py  test_briefing_generator.py  test_digest_notifier.py  test_embedding_service.py  test_gemini_client.py  test_github_fetcher.py  test_groq_client.py  test_highlight_scorer.py  test_hn_fetcher.py  test_main_catchup.py  test_news_store.py  test_pipeline.py  test_rate_limit_integration.py  test_reddit_fetcher.py  test_relevance_scorer.py  test_summary_generator.py  test_weekly_briefing_generator.py  test_x_data_fetcher.py
(+87 files in other folders)
