[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x-ai-news-researcher"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "tweepy>=4.14.0",
    "scikit-learn>=1.4.0",
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "aiosmtplib>=3.0.0",
    "google-generativeai>=0.8.0",
    "groq>=1.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
